# OilOps

./: LICENSE  OilOps\Data\BaseData.py  README.md  README.txt  SUMMARIZE_COGCC_SQL.py  UWI  WorkList.TXT  pyproject.toml  requirements.txt  setup.py
Data/: CoLAS.py
OilOps/: COWATER.py  COWater.py  CoProduction  CoProduction.py  CoScout.py  CoSurveys  CoSurveys.py  DATA.py  DATABASE.py  FORMS.py  GUNBARREL.py  Gunbarrel.py  LOGS.py  MAP.py  Map.py  ND_DATA.py  OneLine.py  PLOT.py  PRODUCTION  PRODUCTION.py  SUMMARIZE_COGCC_SQL.py  SURVEYS.py  SurveyJoin.py  SurveysFromPDF.py  WELLAPI.py  _FUNCS_.py  _MAPFUNCS_.py  _SURVEYFUNCS_.py  __init__.py
OilOps/Data/: BaseData.py  CoLAS.py  CoProduction.py  CoScout.py  CoSurveys.py  FracFocus.py  __init__.py
OilOps/Surveys/: Absolute.py  Spacing.py  SurveyJoin.py
OilOps/workflows/: workflow.yml
PetroOps/: UWI.py  WELLAPI.py  __init__.py
SURVEYS/: SURVEYJOIN.py
Surveys/: Absolute.py  __init__.py
UWI/: UWI.py  setup.py
