[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "OilOps"
version = "1.0.0"
authors = [
    {name = "'W Kurt Rucker", email = "'OilOpsDev@gmail.com"},
]
description = "Oilfield Operations Tools."
readme = "README.txt"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

dependencies = ['adjustText',
                'beautifulsoup4',
                'datetime',
                'docx',
                'easygui',
                'futures3',
                'geopandas',
                'geopy',
                #'hashlib',
                'lasio',
                'lxml',
                'matplotlib',
                'multiprocess',
                'numpy',
                'openpyxl',
                'pandas',
                'pgeocode',
                'psutil',
                'pycrs',
                'pymc',
                'pyproj',
                'pyshp',
                'python-dateutil',
                'python_docx_replace',
                'python-magic-bin;sys.platform=="win32"',
                'requests',
                'ruptures',
                'scikit-learn',
                'scipy',
                'seaborn',
                'selenium',
                'sqlalchemy',
                'statsmodels',
                'tabula-py',
                #'threading',
                #'textract',
                'tqdm',
                'urllib3',
                #'welleng',
                'wellpathpy',
                'wget',
                'xlrd',
                'xlsxwriter']

                      
keywords=[
        'OilOps', 'Colorado data', 'petrophysics', 'well spacing',
        'oilfield data', 'oilfield analysis', 'well survey', 'subsurface mapping'
    ]                    
